Fixed PR17181 by making utrace handle interrupting processes better.

* runtime/stp_utrace.c (utrace_init): Use kallsyms_lookup_name() to lookup
  "wake_up_state" if needed.
  (stp_task_notify_resume): New function to handle the details of adding a
  resume handler.
  (utrace_cleanup): Only output debug printk's if STP_TF_DEBUG is defined.
  (utrace_set_events): Improve check.
  (utrace_do_stop): Call stp_task_notify_resume() instead of inline code.
  (utrace_wakeup): Call stp_wake_up_state() instead of wake_up_process()
  to avoid a WARN(). Call stp_task_notify_resume() instead of inline
  code.
  (utrace_control): Call stp_task_notify_resume() instead of inline code.
  (finish_report): Ditto.
  (finish_resume_report): Add UTRACE_INTERRUPT support.
  (utrace_resume): Handle UTRACE_INTERRUPT.
* runtime/linux/task_finder2.c (stap_task_finder_post_init): Go back to
  sending UTRACE_INTERRUPT to all tasks.
* buildrun.cxx (compile_pass): Add export tests for 'wake_up_state' and
  'try_to_wake_up'.
* runtime/linux/runtime.h: Added 'kallsyms_wake_up_state' declaration when
  necessary.
* testsuite/systemtap.base/process_resume.c: New file.
* testsuite/systemtap.base/process_resume.exp: New file.