testsuite/systemtap.base/process_resume.c
@@ -1,0 +1,10 @@
+#include <sys/types.h>
+#include <unistd.h>
+#include <signal.h>
+ 
+int main()
+{
+    kill(getpid(), SIGSTOP);
+    getpid();
+    return 0;
+}
